# docs/swagger.yaml
@@ -1,4 +1,59 @@
 definitions:
+  models.AllMasterDataResponse:
+    properties:
+      count:
+        example: 1
+        type: integer
+      data:
+        items:
+          $ref: '#/definitions/models.MasterData'
+        type: array
+      success:
+        example: true
+        type: boolean
+    type: object
+  models.ConfirmPaymentResponse:
+    properties:
+      data:
+        properties:
+          transaction_id:
+            example: 60163b3be1e8712c4e7f35cf
+            type: string
+        type: object
+      success:
+        example: true
+        type: boolean
+    type: object
+  models.CreatePaymentBody:
+    properties:
+      buyer_id:
+        example: 60163b3be1e8712c4e7f35cf
+        type: string
+      pet_id:
+        example: 60163b3be1e8712c4e7f35cf
+        type: string
+      price:
+        example: 100
+        type: integer
+      seller_id:
+        example: 60163b3be1e8712c4e7f35ce
+        type: string
+    type: object
+  models.CreatePaymentResponse:
+    properties:
+      data:
+        properties:
+          payment_id:
+            example: "123456789"
+            type: string
+          transaction_id:
+            example: 60163b3be1e8712c4e7f35cf
+            type: string
+        type: object
+      success:
+        example: true
+        type: boolean
+    type: object
   models.DeletePetResponse:
     properties:
       delete_count:
@@ -17,6 +72,53 @@ definitions:
         example: false
         type: boolean
     type: object
+  models.MasterData:
+    properties:
+      category:
+        example: Dog
+        type: string
+      species:
+        example:
+        - Golden Retriever
+        - Poodle
+        - Bulldog
+        - Pug
+        - Chihuahua
+        items:
+          type: string
+        type: array
+      species_count:
+        example: 5
+        type: integer
+    type: object
+  models.MasterDataCategoryResponse:
+    properties:
+      count:
+        example: 3
+        type: integer
+      data:
+        properties:
+          categories:
+            example:
+            - Dog
+            - Cat
+            - Bird
+            items:
+              type: string
+            type: array
+        type: object
+      success:
+        example: true
+        type: boolean
+    type: object
+  models.MasterDataResponse:
+    properties:
+      data:
+        $ref: '#/definitions/models.MasterData'
+      success:
+        example: true
+        type: boolean
+    type: object
   models.Medical_record:
     properties:
       description:
@@ -27,6 +129,18 @@ definitions:
         type: string
       medical_id:
         example: "123456789"
+        type: string
+    type: object
+  models.PaymentIntent:
+    properties:
+      payment_id:
+        example: "123456789"
+        type: string
+      payment_method:
+        example: card
+        type: string
+      transaction_id:
+        example: 60163b3be1e8712c4e7f35cf
         type: string
     type: object
   models.Pet:
@@ -232,9 +346,77 @@ paths:
           description: internal server error
           schema:
             $ref: '#/definitions/models.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
       summary: Get filtered pets
       tags:
       - Pets
+  /api/v1/pets/categories:
+    get:
+      description: Get all categories that system have
+      operationId: GetCategories
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.MasterDataCategoryResponse'
+        "500":
+          description: internal server error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Get all categories that system have
+      tags:
+      - Master Data
+  /api/v1/pets/master:
+    get:
+      description: Get all master data
+      operationId: GetMasterData
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.AllMasterDataResponse'
+        "500":
+          description: internal server error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Get all master data
+      tags:
+      - Master Data
+  /api/v1/pets/master/{category}:
+    get:
+      description: Get master data by category
+      operationId: GetMasterDataByCategory
+      parameters:
+      - description: Category of master data
+        in: path
+        name: category
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.MasterDataResponse'
+        "500":
+          description: internal server error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Get master data by category
+      tags:
+      - Master Data
   /api/v1/pets/pet/{petID}:
     delete:
       consumes:
@@ -257,6 +439,8 @@ paths:
           description: internal server error
           schema:
             $ref: '#/definitions/models.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
       summary: Delete pet
       tags:
       - Pets
@@ -280,6 +464,8 @@ paths:
           description: internal server error
           schema:
             $ref: '#/definitions/models.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
       summary: Get single pet by petID
       tags:
       - Pets
@@ -314,6 +500,8 @@ paths:
           description: internal server error
           schema:
             $ref: '#/definitions/models.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
       summary: Update pet
       tags:
       - Pets
@@ -338,6 +526,8 @@ paths:
           description: internal server error
           schema:
             $ref: '#/definitions/models.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
       summary: Get pets by sellerID
       tags:
       - Pets
@@ -370,10 +560,74 @@ paths:
           description: internal server error
           schema:
             $ref: '#/definitions/models.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
       summary: Create a new pet
       tags:
       - Pets
+  /payment/confirm:
+    post:
+      consumes:
+      - application/json
+      description: Confirm a payment for a transaction
+      parameters:
+      - description: Payment object
+        in: body
+        name: Payment
+        required: true
+        schema:
+          $ref: '#/definitions/models.PaymentIntent'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.ConfirmPaymentResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Confirm a payment
+      tags:
+      - Payments
+  /payment/create:
+    post:
+      consumes:
+      - application/json
+      description: Create a new payment for a transaction
+      parameters:
+      - description: Payment object
+        in: body
+        name: payment
+        required: true
+        schema:
+          $ref: '#/definitions/models.CreatePaymentBody'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/models.CreatePaymentResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Create a new payment
+      tags:
+      - Payments
 schemes:
 - https
 - http
+securityDefinitions:
+  ApiKeyAuth:
+    description: 'Authorization by API key (Format: "Bearer <API_KEY>")'
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
